post title aligned with sidebar image. Text color and hover in sidebar fixed. Footer centered in mobile

--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ body {
 }
 .single-post #primary {
     max-width: 708px;
-    margin: 0;
+    margin: 0px;
     border-right: 1px solid #cfcfcf;
     padding: 30px 0 0;
     float: left;
@@ -2018,7 +2018,7 @@ body.page-template-page-portfolio-php #primary {
 }
 .single-portfolio #primary {
     width: 100%;
-    margin: 0;
+    margin: 30px 0px 0px 0px;
     padding: 0;
     float: none;
 }
@@ -2356,6 +2356,7 @@ body.single-portfolio .rsDefault .rsArrow:hover .rsArrowIcn {
 .articleDetail {
     float: left;
     width: 600px;
+    padding-top: 5px;
 }
 .articleName {
     font-size: 36px;
@@ -4057,7 +4058,7 @@ a[data-datetime] {
 .widget a:hover,
 .widget a:focus,
 .widget a:active {
-    color: #ababab;
+    color: #ddbe85;
 }
 .widget img {
     margin: 0.3em 0 0 0;
@@ -4769,7 +4770,7 @@ ul.footerNav li a:hover {
     /* Stops the Wiggling! */
 }
 #site-generator p {
-    margin: 0;
+    margin-left: 90px;
     padding: 0;
     color: #000;
     float: right;
